# routes/api.php
@@ -45,3 +45,7 @@ Route::prefix('/auth')->group(function () {
     });
 
 });
+
+Route::prefix('/team')->group(function () {
+    Route::post('make', [App\Http\Controllers\api\member\AuthController::class, 'make']);
+});
